<resources>
    <string name="app_name">25012012037_MAD_PRA3</string>
    <string name="guni">GUNI</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="sign_up">SIGN UP</string>
    <string name="web_url_label">Web Url:</string>
    <string name="phone_no_label">Phone No.:</string>
    <string name="call_log_label">Call Log:</string>
    <string name="gallery_label">Gallery:</string>
    <string name="camera_label">Camera:</string>
    <string name="alarm_label">Alarm:</string>
    <string name="login_label">Login:</string>
    <string name="browse">Browse</string>
    <string name="call">Call</string>
    <string name="call_log">Call Log</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="alarm">Alarm</string>
    <string name="user_full_name">User Full Name</string>
    <string name="city">City</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="have_account_query">Do you have an account?</string>
    <string name="guni_logo_desc">GUNI Logo</string>
</resources>