<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF6FC"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/guni_logo_desc"
        android:src="@drawable/guni_pink_logo_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="#EDE4F3"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/label_FullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:labelFor="@id/edit_full_name"
                android:text="@string/user_full_name"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/edit_full_name"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_full_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@id/label_FullName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/label_FullName" />

            <TextView
                android:id="@+id/label_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:labelFor="@id/edit_phone"
                android:text="@string/phone_no_label"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/edit_phone"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_FullName" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:ems="10"
                android:inputType="phone"
                app:layout_constraintBaseline_toBaselineOf="@id/label_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/label_phone" />

            <TextView
                android:id="@+id/label_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:labelFor="@id/edit_city"
                android:text="@string/city"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/edit_city"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_phone" />

            <EditText
                android:id="@+id/edit_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="postalAddress"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintBaseline_toBaselineOf="@id/label_city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/label_city" />

            <TextView
                android:id="@+id/label_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:labelFor="@id/edit_email"
                android:text="@string/email_id"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/edit_email"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_city" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintBaseline_toBaselineOf="@id/label_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/label_email" />

            <TextView
                android:id="@+id/label_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:labelFor="@id/edit_password"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/edit_password"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_email" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBaseline_toBaselineOf="@id/label_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/label_password" />

            <TextView
                android:id="@+id/label_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/reg_top_margin"
                android:labelFor="@id/edit_confirm_password"
                android:text="@string/confirm_password"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/edit_confirm_password"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_password" />

            <EditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBaseline_toBaselineOf="@id/label_confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/label_confirm_password" />

            <View
                android:id="@+id/spacer"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/edit_confirm_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:elevation="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardRegister">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account_query"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/btnLogin"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/login_btn_bg"
            android:paddingLeft="10dp"
            android:text="@string/login"
            android:textColor="@color/login_btn_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>